src/styles/UserButton.css
#manage-profile {
  aspect-ratio: 1;
  width: 30px;
  border-radius: 50%;
  border: solid 2px;
  background-color: rebeccapurple;
}

#userbutton {
  display: flex;
  flex-direction: column;
  align-content: start;
}

#user-menu {
  width: 300px;
  height: 400px;
  background-color: var(--secondary-bg-color);
  border-radius: 0 0 0 20px;

  position: absolute;
  right: 12px;
  top: 12px;

  display: flex;
  flex-direction: column;
  padding: 12px 24px 24px 24px;
}

#user-menu-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#close-menu:active#close-menu:focus {
  display: none;
}
#close-menu {
  align-self: flex-end;
  background: none;
  border: none;
  padding: 0;
  width: fit-content;
  font-size: 2rem;
}

#menu {
  padding: 12px 0;
  width: 100%;
}

#menu li:hover {
  cursor: pointer;
  color: rgb(194, 194, 255);
  font-weight: 500;
}

#logout {
  width: 100%;
  margin-top: auto;
  justify-self: end;
}

#account-details {
  display: grid;
  gap: 12px;
}

#account-details li {
  display: flex;
  flex-direction: column;
}

#account-details li p {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.edit-info-btn {
  width: calc(fit-content / 2);
  display: inline;
  width: fit-content;
}

